Fix alignment for notifications. Color navbar badge accordingly/

--- a/assets/styles/extras.css
+++ b/assets/styles/extras.css
@@ -33,9 +33,9 @@
 }
 .notification-container {
   text-align: center !important;
+  margin: auto;
 }
 .notification {
-  display: block;
   margin: 10px !important;
   padding: 0px !important;
   border-radius: 5px;
